[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/SocketInspector.gd" type="Script" id=1]
[ext_resource path="res://Textures/rangeIndicator.png" type="Texture" id=2]
[ext_resource path="res://Textures/SocketInspector.png" type="Texture" id=3]

[node name="SocketInspector" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="zLayer" type="Node2D" parent="."]

z/z = 2

[node name="RangeIndicator" type="TextureFrame" parent="zLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -248.0
margin/top = -248.0
margin/right = 264.0
margin/bottom = 264.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="SlotTex" type="TextureFrame" parent="zLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = -33.0
margin/top = -33.0
margin/right = 33.0
margin/bottom = 33.0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="MainSlot" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -16.0
margin/top = -32.0
margin/right = 16.0
margin/bottom = 0.0

[node name="SideSlot1" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = 8.0
margin/right = -8.0
margin/bottom = 32.0

[node name="SideSlot2" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 32.0
margin/bottom = 32.0


